--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-numpy
-pandas
-plotly
-seaborn
-matplotlib
-pandas>=1.5.0
-openpyxl>=3.0.0
-streamlit>=1.32.0
+pandas>=2.0.0
+numpy>=1.23.0
+streamlit>=1.38.0
+matplotlib>=3.7.0
 google-generativeai>=0.3.2
