--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+streamlit==1.38.0
 pandas>=2.0.0
-numpy>=1.23.0
-streamlit>=1.38.0
 matplotlib>=3.7.0
+numpy>=1.23.0
 google-generativeai>=0.3.2
+openai>=1.2.0
+fuzzywuzzy>=0.18.0
+python-Levenshtein>=0.20.0
