--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-streamlit==1.38.0
-pandas>=2.0.0
-matplotlib>=3.7.0
-numpy>=1.23.0
-google-generativeai>=0.3.2
+streamlit
+pandas
+google-generativeai
